Accomodate some changes to have names greater than 32 chars after receiveing a file from Tableau fellows